<resources>
    <string name="__arcore_cancel">Cancel</string>
    <string name="__arcore_continue">Continue</string>
    <string name="__arcore_install_app">This application requires the latest version of Google Play Services for AR.</string>
    <string name="__arcore_install_feature">This feature requires the latest version of Google Play Services for AR.</string>
    <string name="__arcore_installing">Installing Google Play Services for AR…</string>
    <string name="CCT_WB_intensity_title">Intensity</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="akita">Pixel 8a (Akita)</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="all_default_title">0</string>
    <string name="all_hdr">All modes</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="antibanding_title">Antibanding Mode</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="auto_hdr">HDR+ ( Off / Auto / Net )</string>
    <string name="auto_ns_title">Auto Night Sight</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_mars_desc">Save photos &amp; videos to a private storage space in Google Photos on your device</string>
    <string name="about_mars_desc_2">You can find Locked Folder in Google Photos in the Library tab</string>
    <string name="about_mars_title">Hide sensitive photos &amp; videos</string>
    <string name="accessibility_amber_start">Start cinematic blur</string>
    <string name="accessibility_amber_stop">Stop cinematic blur</string>
    <string name="accessibility_autotimer_start">Start auto-timer</string>
    <string name="accessibility_autotimer_stop">Stop auto-timer</string>
    <string name="b_p_p_AUTO">Auto</string>
    <string name="accessibility_back_to_video_description">Back to normal video mode</string>
    <string name="accessibility_cancel_button">Cancel photo</string>
    <string name="accessibility_capture_imax_start">Start panorama</string>
    <string name="accessibility_capture_imax_stop">Stop panorama</string>
    <string name="accessibility_capture_serengeti_start">Start capture</string>
    <string name="accessibility_capture_serengeti_stop">Stop capture</string>
    <string name="b_p_p_summary">"%s
The format used to store the color when encoding."</string>
    <string name="accessibility_capture_video_start">Start video</string>
    <string name="accessibility_capture_video_stop">Stop video</string>
    <string name="accessibility_cheetah_video_start">Start time lapse</string>
    <string name="accessibility_cheetah_video_stop">Stop time lapse</string>
    <string name="accessibility_close_button">Close</string>
    <string name="accessibility_close_social_share">Close social share</string>
    <string name="accessibility_done_button">Done</string>
    <string name="accessibility_elapsed_recording_time_description">Recording time %1$s</string>
    <string name="accessibility_filmstrip_toggle">Photo gallery</string>
    <string name="accessibility_hfr_record_speed_desc">Slow Motion %1$d/%2$d times speed</string>
    <string name="accessibility_hfr_video_start">Start slow motion</string>
    <string name="accessibility_hfr_video_stop">Stop slow motion</string>
    <string name="accessibility_imax_backtracking">Move in original direction</string>
    <string name="accessibility_imax_too_fast">Slow down</string>
    <string name="accessibility_imax_too_much_roll">Hold phone straight</string>
    <string name="accessibility_longshot_capture">Take quick video</string>
    <string name="accessibility_open_social_share">Open social share</string>
    <string name="accessibility_processing_the_photo">Processing the photo</string>
    <string name="b_p_p_title">Bits Per Pixel</string>
    <string name="accessibility_shutter_button">Shutter</string>
    <string name="accessibility_speech_enhance_indicator">Speech Enhancement on</string>
    <string name="barbet">Pixel 5a 5G (Barbet)</string>
    <string name="bl_0">0</string>
    <string name="accessibility_take_astro_button">Take Astrophotography photo</string>
    <string name="accessibility_take_catshark_portrait_button">Take Night Sight in Portrait</string>
    <string name="accessibility_take_lasagna_button">Take Motion mode photo</string>
    <string name="accessibility_take_nightsight_button">Take Night Sight photo</string>
    <string name="accessibility_take_photo_button">Take photo</string>
    <string name="accessibility_take_photosphere_button">Take photosphere</string>
    <string name="accessibility_take_portrait_button">Take portrait</string>
    <string name="accessibility_timelapse_auto_record_speed_desc">Time Lapse auto speed</string>
    <string name="bl_100">100</string>
    <string name="bl_16">16</string>
    <string name="accessibility_video_night_sight_start">Start night sight video</string>
    <string name="accessibility_video_night_sight_stop">Stop night sight video</string>
    <string name="accessibility_video_output_length_description">Output video length %1$s</string>
    <string name="advice_dirty_lens">Your lens may need cleaning</string>
    <string name="advice_dirty_lens_popup_text">"Lens smudges aren't always easy to see, and they can come from fingerprints, oil or dirt.

Clean your lens for better photo quality."</string>
    <string name="bl_63_9">63.9</string>
    <string name="advice_scene_distance_message">Move back to improve focus</string>
    <string name="bl_64">64</string>
    <string name="af_ae_lock">AF / AE Lock</string>
    <string name="af_desc">Focus options</string>
    <string name="af_off_far_acc_desc">Lock focus to far</string>
    <string name="af_off_far_desc">Far</string>
    <string name="af_off_infinity_acc_desc">Lock focus to infinity</string>
    <string name="af_off_infinity_desc">Infinity</string>
    <string name="af_off_near_acc_desc">Lock focus to near</string>
    <string name="af_off_near_desc">Near</string>
    <string name="af_on_acc_desc">Turn on autofocus</string>
    <string name="af_on_option_desc">Auto</string>
    <string name="af_option_desc">Focus</string>
    <string name="all_in_suggestion">Want to be in the group photo?</string>
    <string name="bl_auto">Auto</string>
    <string name="amber_description">Creates a cinematic effect by blurring the background behind your subject and records at 24 frames/sec</string>
    <string name="bl_dynamic">Dynamic</string>
    <string name="bl_help">If there are \"pink spots\" in the photo in low light - try changing the value of this menu item.</string>
    <string name="amber_name">Cinematic Blur</string>
    <string name="amber_tap_on_subject_to_focus">Tap on a subject to focus</string>
    <string name="amethyst_description">More true to life with a wider range of colors, brightness, and contrast</string>
    <string name="amethyst_name">10-bit HDR</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="bl_summary">%s</string>
    <string name="app_name">Camera</string>
    <string name="pgc_app_name">PGC Camera</string>
    <string name="bl_title">Black Level</string>
    <string name="arcore_version_error_dogfood">You will need to join the AR dogfood program with your work profile to download the update.</string>
    <string name="arcore_version_error_message">%s requires the latest version of the Google Play Services for AR app</string>
    <string name="arcore_version_error_title">Latest AR app is needed</string>
    <string name="arcore_version_error_update">Go to Play Store</string>
    <string name="arcore_version_join_dogfood">Join Dogfood</string>
    <string name="aspect_ratio_desc">Ratio</string>
    <string name="astro_auto_acc_desc">Astrophotography Auto</string>
    <string name="astro_auto_desc">Auto</string>
    <string name="astro_capture_start_desc">Capturing astro photo</string>
    <string name="astro_desc">Astrophotography</string>
    <string name="astro_edu_about_options_bar">About</string>
    <string name="astro_value_label">Astro</string>
    <string name="auto_value_label">Auto</string>
    <string name="best_take_progressing_desc">Best Take</string>
    <string name="faceretouch_on_light_acc_desc">Face retouching subtle</string>
    <string name="faceretouch_on_strong_acc_desc">Face retouching smooth</string>
    <string name="hotshot_bottom_sheet_additional_info">Palm timer will be disabled when Guided Frame is on.</string>
    <string name="hotshot_bottom_sheet_close_button">Close</string>
    <string name="hotshot_bottom_sheet_info">"Take selfies with the help of audio and vibrations.

With TalkBack, audio and vibrations will guide you towards the center of the viewfinder. After a 3 second countdown, a photo will be taken."</string>
    <string name="hotshot_bottom_sheet_try_hotshot_button">Turn on Guided Frame</string>
    <string name="hotshot_edu_image_content_description">Video showing how Guided Frame helps you to take a photo.</string>
    <string name="mars_learn_more">Learn more</string>
    <string name="save_desc">Photo saving</string>
    <string name="max_value_label">Max</string>
    <string name="micro_auto_desc">Top Shot auto</string>
    <string name="micro_on_desc">Top Shot on</string>
    <string name="micro_reprocessing_auto_desc">Best Take auto</string>
    <string name="micro_reprocessing_on_desc">Best Take on</string>
    <string name="min_value_label">Off</string>
    <string name="nightlapse_edu_description">Capture vibrant and detailed Time Lapse videos when it’s dark</string>
    <string name="nightlapse_edu_nightlapse_video">Night Sight</string>
    <string name="nightlapse_edu_original_video">Original</string>
    <string name="nightlapse_edu_status_info">The shutter will display a moon icon when it’s dark enough. Tap to start recording.</string>
    <string name="nightlapse_edu_steady_info">Place phone on a steady surface like a tripod or rock</string>
    <string name="nightlapse_edu_video_length">1080p: %1$d mins of recording for a %2$d sec video. 4K: %3$d mins of recording for a %4$d sec video. Only available in the Auto speed option.</string>
    <string name="nsv_btm_sheet_desc">With Night Sight Video, your recorded video will get boosted with improved lighting, clearer picture, and amplified colors</string>
    <string name="nsv_caption_boosted">Boosted</string>
    <string name="nsv_caption_initial">Initial</string>
    <string name="nsv_photos_backup_desc">Videos will need to be under a certain length and backed up in Google Photos. <a href="https://support.google.com/googlecamera?p=video_boost">Learn more</a></string>
    <string name="selfie_angle_bottom_sheet_description">When you take a selfie, try holding the camera slightly above your eyes.</string>
    <string name="selfie_angle_bottom_sheet_setting_button">Turn off hints in Settings</string>
    <string name="selfie_angle_bottom_sheet_turn_off_button">Dismiss</string>
</resources>