<?xml version="1.0" encoding="utf-8"?>
<merge android:layout_gravity="left|center" android:id="@id/minibar_container" android:layout_width="wrap_content" android:layout_height="@dimen/minibar_height" android:animateLayoutChanges="true"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.apps.camera.optionsbar.view.LinearMinibarImpl android:layout_gravity="left|center" android:orientation="horizontal" android:id="@id/new_minibar" android:background="@drawable/new_minibar_background" android:paddingTop="@dimen/minibar_vertical_padding" android:paddingBottom="@dimen/minibar_vertical_padding" android:clickable="true" android:layout_width="wrap_content" android:layout_height="@dimen/minibar_height" android:animateLayoutChanges="true" android:importantForAccessibility="noHideDescendants">
        <android.support.v7.widget.AppCompatImageView android:id="@id/minibar_item_save" android:src="@drawable/outline_save_white_48" android:contentDescription="@string/save_desc" style="@style/new_minibar_item_style" />
        <android.support.v7.widget.AppCompatImageView android:id="@id/minibar_item_ext1" style="@style/new_minibar_item_style" />
        <android.support.v7.widget.AppCompatImageView android:id="@id/minibar_item_ext2" style="@style/new_minibar_item_style" />
        <android.support.v7.widget.AppCompatImageView android:id="@id/minibar_item_ext3" style="@style/new_minibar_item_style" />
        <android.support.v7.widget.AppCompatImageView android:id="@id/minibar_item_ext4" style="@style/new_minibar_item_style" />
        <android.support.v7.widget.AppCompatImageView android:id="@id/minibar_item_motion_on_always" android:src="@drawable/gs_photo_merge_auto_vd_theme_24" android:contentDescription="@string/micro_on_desc" style="@style/new_minibar_item_style" />
        <android.support.v7.widget.AppCompatImageView android:id="@id/minibar_item_motion_on_auto" android:src="@drawable/gs_photo_auto_merge_vd_theme_24" android:contentDescription="@string/micro_auto_desc" style="@style/new_minibar_item_style" />
        <android.support.v7.widget.AppCompatImageView android:id="@id/minibar_item_face_strong" android:src="@drawable/gs_face_retouch_smooth_fill1_vd_24" android:contentDescription="@string/faceretouch_on_strong_acc_desc" style="@style/new_minibar_item_style" />
        <android.support.v7.widget.AppCompatImageView android:id="@id/minibar_item_face_light" android:src="@drawable/gs_face_retouch_fill1_vd_24" android:contentDescription="@string/faceretouch_on_light_acc_desc" style="@style/new_minibar_item_style" />
        <android.support.v7.widget.AppCompatImageView android:id="@id/minibar_item_best_take_on" android:src="@drawable/gs_photo_merge_auto_vd_theme_24" android:contentDescription="@string/micro_reprocessing_on_desc" style="@style/new_minibar_item_style" />
        <android.support.v7.widget.AppCompatImageView android:id="@id/minibar_item_best_take_auto" android:src="@drawable/gs_photo_auto_merge_vd_theme_24" android:contentDescription="@string/micro_reprocessing_auto_desc" style="@style/new_minibar_item_style" />
    </com.google.android.apps.camera.optionsbar.view.LinearMinibarImpl>
    <com.google.android.apps.camera.optionsbar.view.HighlightBarIndicator android:id="@id/minibar_item_best_take_indicator" android:background="@drawable/gradient_bar_list" android:contentDescription="@dimen/highlightBar_content_padding" style="@style/new_minibar_highlightBar_indicator_style">
        <android.support.v7.widget.AppCompatImageView android:id="@id/highlightBar_best_take_icon" android:visibility="visible" android:src="@drawable/gs_photo_merge_auto_vd_theme_24" android:contentDescription="@string/micro_reprocessing_on_desc" style="@style/highlightBar_item_style" />
        <TextView android:textSize="@dimen/highlightBar_text_size" android:typeface="normal" android:textColor="@color/highlight_bar_default_text_color" android:ellipsize="marquee" android:gravity="left" android:layout_gravity="center_vertical" android:id="@id/highlightBar_best_take_text" android:visibility="visible" android:fadingEdgeLength="4.0dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:maxWidth="290.0px" android:text="@string/best_take_progressing_desc" android:scrollHorizontally="true" android:singleLine="true" android:marqueeRepeatLimit="2" android:textIsSelectable="false" android:requiresFadingEdge="horizontal" android:fontFamily="@font/google_sans_medium_compat" android:textAlignment="textStart" android:paddingStart="@dimen/highlightBar_content_padding" android:paddingEnd="@dimen/highlightBar_content_padding" android:autoSizeTextType="uniform" android:autoSizeMinTextSize="9.0sp" android:autoSizeMaxTextSize="14.0sp" />
    </com.google.android.apps.camera.optionsbar.view.HighlightBarIndicator>
</merge>
