<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginTop="16.0dp" android:layout_marginBottom="28.0dp" android:paddingHorizontal="24.0dp"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textAppearance="?textAppearanceBodyMedium" android:textColor="?colorOnSurface" android:gravity="center_horizontal" android:id="@id/hotshot_edu_info" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/hotshot_bottom_sheet_info" />
    <androidx.cardview.widget.CardView android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="24.0dp" app:cardCornerRadius="28.0dp" app:cardElevation="0.0dp">
        <com.airbnb.lottie.LottieAnimationView android:layout_width="wrap_content" android:layout_height="wrap_content" android:scaleType="centerCrop" android:contentDescription="@string/hotshot_edu_image_content_description" app:lottie_autoPlay="true" app:lottie_loop="true" app:lottie_rawRes="@raw/hotshot_edu_animation" />
    </androidx.cardview.widget.CardView>
    <TextView android:textAppearance="?textAppearanceBodySmall" android:textColor="?colorOnSurface" android:id="@id/hotshot_edu_additional_info" android:padding="12.0dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/hotshot_bottom_sheet_additional_info" android:drawablePadding="16.0dp" android:drawableStart="@drawable/gs_tips_and_updates_vd_theme_24" android:layout_marginVertical="24.0dp" />
    <com.google.android.material.button.MaterialButton android:id="@id/try_hotshot_button" android:visibility="gone" android:layout_width="match_parent" android:layout_height="@dimen/edu_button_height" android:text="@string/hotshot_bottom_sheet_try_hotshot_button" style="@style/MaterialButtonOutlinedStyle.TopRoundedCorner12dp.BottomRoundedCorner4dp" />
    <com.google.android.material.button.MaterialButton android:id="@id/close_button_with_try_hotshot" android:visibility="gone" android:layout_width="match_parent" android:layout_height="@dimen/edu_button_height" android:text="@string/hotshot_bottom_sheet_close_button" style="@style/MaterialButtonOutlinedStyle.TopRoundedCorner4dp.BottomRoundedCorner12dp" />
    <com.google.android.material.button.MaterialButton android:id="@id/close_button" android:layout_width="match_parent" android:layout_height="@dimen/edu_button_height" android:layout_margin="0.0dp" android:text="@string/hotshot_bottom_sheet_close_button" style="@style/MaterialButtonOutlinedStyle.AllRoundedCorner12dp" />
</LinearLayout>
