<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:paddingTop="16.0dp" android:paddingBottom="16.0dp" android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textAppearance="?textAppearanceBodyMedium" android:textColor="?colorOnSurface" android:gravity="center_horizontal" android:layout_gravity="start" android:id="@id/nightlapse_edu_description" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/nightlapse_edu_description" android:layout_marginStart="24.0dp" android:layout_marginEnd="24.0dp" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <com.google.android.apps.camera.ui.compositevideoview.CompositeVideoView android:id="@id/nightlapse_videoview" android:layout_width="364.0dp" android:layout_height="265.0dp" android:layout_marginTop="24.0dp" android:layout_marginStart="24.0dp" android:layout_marginEnd="24.0dp" app:layout_constraintEnd_toEndOf="@id/nightlapse_edu_description" app:layout_constraintStart_toStartOf="@id/nightlapse_edu_description" app:layout_constraintTop_toBottomOf="@id/nightlapse_edu_description" />
    <TextView android:textAppearance="?textAppearanceBodySmall" android:gravity="center_horizontal" android:id="@id/original_timelapse_videoview_caption" android:paddingTop="16.0dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="100.0dp" android:text="@string/nightlapse_edu_original_video" app:layout_constraintLeft_toLeftOf="@id/nightlapse_videoview" app:layout_constraintRight_toRightOf="@id/nightlapse_videoview_caption" app:layout_constraintTop_toBottomOf="@id/nightlapse_videoview" />
    <TextView android:textAppearance="?textAppearanceBodySmall" android:gravity="center_horizontal" android:id="@id/nightlapse_videoview_caption" android:paddingTop="16.0dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="100.0dp" android:text="@string/nightlapse_edu_nightlapse_video" app:layout_constraintLeft_toLeftOf="@id/original_timelapse_videoview_caption" app:layout_constraintRight_toRightOf="@id/nightlapse_videoview" app:layout_constraintTop_toBottomOf="@id/nightlapse_videoview" />
    <TextView android:textAppearance="?textAppearanceBodyMedium" android:textColor="?colorOnSurface" android:gravity="start" android:layout_gravity="start" android:id="@id/nightlapse_edu_steady_description_view" android:paddingTop="32.0dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/nightlapse_edu_steady_info" android:drawablePadding="24.0dp" android:drawableStart="@drawable/gs_system_update_vd_theme_24" android:layout_marginStart="24.0dp" android:layout_marginEnd="24.0dp" app:layout_constraintEnd_toEndOf="@id/nightlapse_edu_description" app:layout_constraintStart_toStartOf="@id/nightlapse_edu_description" app:layout_constraintTop_toBottomOf="@id/nightlapse_videoview_caption" />
    <TextView android:textAppearance="?textAppearanceBodyMedium" android:textColor="?colorOnSurface" android:gravity="start" android:layout_gravity="start" android:id="@id/nightlapse_edu_status_description_view" android:paddingTop="32.0dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/nightlapse_edu_status_info" android:drawablePadding="24.0dp" android:drawableStart="@drawable/gs_clear_night_vd_theme_24" android:layout_marginStart="24.0dp" android:layout_marginEnd="24.0dp" app:layout_constraintEnd_toEndOf="@id/nightlapse_edu_description" app:layout_constraintStart_toStartOf="@id/nightlapse_edu_description" app:layout_constraintTop_toBottomOf="@id/nightlapse_edu_steady_description_view" />
    <TextView android:textAppearance="?textAppearanceBodySmall" android:textColor="?colorOnSurface" android:gravity="center_horizontal" android:id="@id/nightlapse_edu_record_duration_info" android:paddingTop="32.0dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/nightlapse_edu_video_length" android:layout_marginStart="24.0dp" android:layout_marginEnd="24.0dp" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="@id/nightlapse_edu_description" app:layout_constraintStart_toStartOf="@id/nightlapse_edu_description" app:layout_constraintTop_toBottomOf="@id/nightlapse_edu_status_description_view" />
</androidx.constraintlayout.widget.ConstraintLayout>
