<?xml version="1.0" encoding="utf-8"?>
<merge android:focusable="true" android:visibility="visible" android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:layout_gravity="center|bottom" android:id="@id/slider_background" android:background="@drawable/countdown_slider_bg" android:layout_width="@dimen/slider_background_width" android:layout_height="@dimen/slider_background_height" android:layout_marginBottom="@dimen/slider_bottom_margin" />
    <com.google.android.apps.camera.zoomui.view.OutlineTextView android:textSize="@dimen/slider_center_text_font_size" android:textColor="?colorOnSurface" android:layout_gravity="center|bottom" android:id="@id/center_tick_text" android:layout_width="@dimen/slider_center_text_width" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/slider_center_text_bottom_margin" android:fontFamily="@font/google_sans_text_medium" />
    <com.google.android.apps.camera.ui.views.FadingEdgeLayout android:layout_gravity="center|bottom" android:id="@id/countdown_slider_frame" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/slider_bottom_margin">
        <com.google.android.apps.camera.ui.views.CountdownSnapSlider android:layout_gravity="center|bottom" android:id="@id/countdown_slider_view" android:clickable="true" android:layout_width="290.0dp" android:layout_height="@dimen/slider_background_height" />
        <TextView android:textSize="@dimen/label_font_size" android:layout_gravity="bottom" android:id="@id/auto_value_label" android:paddingBottom="@dimen/label_bottom_padding" android:layout_width="@dimen/label_dim" android:layout_height="@dimen/label_dim" android:contentDescription="@string/auto_value_label" android:fontFamily="@font/google_sans_text_medium" />
        <TextView android:textSize="@dimen/label_font_size" android:layout_gravity="bottom" android:id="@id/min_value_label" android:paddingBottom="@dimen/label_bottom_padding" android:layout_width="@dimen/label_dim" android:layout_height="@dimen/label_dim" android:contentDescription="@string/min_value_label" android:fontFamily="@font/google_sans_text_medium" />
        <TextView android:textSize="@dimen/label_font_size" android:layout_gravity="bottom" android:id="@id/max_value_label" android:paddingBottom="@dimen/label_bottom_padding" android:layout_width="@dimen/label_dim" android:layout_height="@dimen/label_dim" android:contentDescription="@string/max_value_label" android:fontFamily="@font/google_sans_text_medium" />
        <TextView android:textSize="@dimen/label_font_size" android:layout_gravity="bottom" android:id="@id/astro_value_label" android:paddingBottom="@dimen/label_bottom_padding" android:layout_width="@dimen/label_dim" android:layout_height="@dimen/label_dim" android:contentDescription="@string/astro_value_label" android:fontFamily="@font/google_sans_text_medium" />
    </com.google.android.apps.camera.ui.views.FadingEdgeLayout>
    <ImageView android:layout_gravity="center|bottom" android:id="@id/selected_option_icon" android:layout_width="@dimen/selected_option_icon_size" android:layout_height="@dimen/selected_option_icon_size" android:layout_marginRight="@dimen/selected_option_icon_right_margin" android:layout_marginBottom="@dimen/selected_option_icon_bottom_margin" android:tint="?colorPrimary" android:importantForAccessibility="no" />
</merge>
